Fixed some errors.
Added an EventType.

--- a/frontend/Technos-Web/tsconfig.json
+++ b/frontend/Technos-Web/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
