--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,4 @@
-name: 'sobekwa'
+name: 'technosweb'
 services:
   redis:
     image: redis
@@ -27,15 +27,13 @@ services:
       - TZ=Europe/Paris
       - PGTZ=Europe/Paris
     restart: unless-stopped
-  adminer:
-    image: adminer
-    restart: unless-stopped
-    ports:
-      - "8080:8080"
+
   api:
     build:
+      context: .
       dockerfile: Dockerfile
-    command: sh -c "/wait && uvicorn app.main:app --host "0.0.0.0" --port ${API_SERVER_PORT} --forwarded-allow-ips="*" --proxy-headers"
+    container_name: nest-api
+    command: sh -c "/wait && npm run start:prod"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -52,11 +50,24 @@ services:
       - WAIT_SLEEP_INTERVAL=1
       - WAIT_HOST_CONNECT_TIMEOUT=30
     ports:
-      - "8000:8000"
-    restart: unless-stopped
+      - '3000:3000'
     depends_on:
       - postgres
       - redis
+    volumes:
+      - ./src:/app/src
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    container_name: pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${POSTGRES_USER}@test.com
+      - PGADMIN_DEFAULT_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - '8080:8080'
+    depends_on:
+      - postgres
 
 volumes:
   postgres_data:
