--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -26,9 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
