--- a/frontend/app/tsconfig.spec.json
+++ b/frontend/app/tsconfig.spec.json
@@ -9,7 +9,7 @@
     ]
   },
   "include": [
-    "app/src/**/*.spec.ts",
-    "app/src/**/*.d.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
   ]
 }
