--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,3 +6,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80"
+    networks:
+      - technosweb_net
+
+networks:
+  technosweb_net:
+    external: true
