--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - REDIS_HOST=redis
       - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DB=${REDIS_DB}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - API_SERVER_PORT=${API_SERVER_PORT}
       - JWT_AUTH_TOKEN_SECRET_KEY=${JWT_AUTH_TOKEN_SECRET_KEY}
