--- a/backend/examples/.env.example
+++ b/backend/examples/.env.example
@@ -5,6 +5,7 @@ POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 
 REDIS_DB="0"
+REDIS_USER="technos_web_admin"
 REDIS_PASSWORD="redis_key_to_replace"
 REDIS_PORT=6379
 REDIS_HOST=localhost
