--- a/frontend/app/nginx.conf
+++ b/frontend/app/nginx.conf
@@ -1,23 +1,16 @@
 server {
     listen 80;
 
-    server_name localhost;
-
-    root /usr/share/nginx/html;
-
-
+    # Serve the Angular app
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
+        root /usr/share/nginx/html/browser;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-    
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
 
-    location /health {
-            return 200;
-        }
+    # Optional: Add caching for assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
 }
