Fixed nginx issues.

--- a/frontend/app/nginx.conf
+++ b/frontend/app/nginx.conf
@@ -3,14 +3,28 @@ server {
 
     # Serve the Angular app
     location / {
-        root /usr/share/nginx/html/browser;
+        root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Add caching for assets
+    # Caching for assets with correct MIME types
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg|eot)$ {
+        root /usr/share/nginx/html;  # Ensure the correct root
         expires 1y;
         add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    # Ensure proper MIME types for JS and CSS
+    location ~* \.js$ {
+        root /usr/share/nginx/html;  # Ensure the correct root
+        add_header Content-Type application/javascript;  # Correct MIME type for JS
+        try_files $uri =404;  # Return 404 if not found
+    }
+
+    location ~* \.css$ {
+        root /usr/share/nginx/html;  # Ensure the correct root
+        add_header Content-Type text/css;  # Correct MIME type for CSS
+        try_files $uri =404;  # Return 404 if not found
     }
 }
