--- a/frontend/app/nginx.conf
+++ b/frontend/app/nginx.conf
@@ -1,6 +1,12 @@
 server {
     listen 80;
 
+    # Add CORS headers globally for all requests
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+    add_header Access-Control-Allow-Headers 'Content-Type, Authorization, Access-Control-Allow-Origin';
+    add_header Access-Control-Allow-Credentials 'true';
+
     # Serve the Angular app
     location / {
         root /usr/share/nginx/html;
@@ -10,21 +16,21 @@ server {
 
     # Caching for assets with correct MIME types
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg|eot)$ {
-        root /usr/share/nginx/html;  # Ensure the correct root
+        root /usr/share/nginx/html;
         expires 1y;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     # Ensure proper MIME types for JS and CSS
     location ~* \.js$ {
-        root /usr/share/nginx/html;  # Ensure the correct root
-        add_header Content-Type application/javascript;  # Correct MIME type for JS
-        try_files $uri =404;  # Return 404 if not found
+        root /usr/share/nginx/html;
+        add_header Content-Type application/javascript;
+        try_files $uri =404;
     }
 
     location ~* \.css$ {
-        root /usr/share/nginx/html;  # Ensure the correct root
-        add_header Content-Type text/css;  # Correct MIME type for CSS
-        try_files $uri =404;  # Return 404 if not found
+        root /usr/share/nginx/html;
+        add_header Content-Type text/css;
+        try_files $uri =404;
     }
 }
